fix content-type parse error