@@ -1,11 +1,13 @@
-package com.hibegin.http.server.impl;
+package com.hibegin.http.server;
 
 import com.hibegin.common.util.LoggerUtil;
 import com.hibegin.http.server.api.HttpRequestDeCoder;
 import com.hibegin.http.server.api.HttpResponse;
 import com.hibegin.http.server.api.Interceptor;
 import com.hibegin.http.server.config.ServerConfig;
+import com.hibegin.http.server.util.FileCacheKit;
 
+import java.lang.reflect.InvocationTargetException;
 import java.net.Socket;
 import java.util.ArrayList;
 import java.util.List;
@@ -14,9 +16,9 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
-public class ServerContext {
+public class ApplicationContext {
 
-    private static final Logger LOGGER = LoggerUtil.getLogger(ServerContext.class);
+    private static final Logger LOGGER = LoggerUtil.getLogger(ApplicationContext.class);
     private boolean init;
     private List<Interceptor> interceptors;
 
@@ -40,16 +42,20 @@ public class ServerContext {
         return interceptors;
     }
 
-    public void init() {
+    void init() {
         if (!init) {
+            //清空tmp目录
+            FileCacheKit.cleanByFlag(serverConfig.getPort());
             init = true;
             interceptors = new ArrayList<>();
             for (Class<? extends Interceptor> interceptorClazz : serverConfig.getInterceptors()) {
                 try {
-                    Interceptor interceptor = interceptorClazz.newInstance();
+                    Interceptor interceptor = interceptorClazz.getDeclaredConstructor().newInstance();
                     interceptors.add(interceptor);
                 } catch (InstantiationException | IllegalAccessException e) {
                     LOGGER.log(Level.SEVERE, "init interceptor error", e);
+                } catch (NoSuchMethodException | InvocationTargetException e) {
+                    e.printStackTrace();
                 }
             }
         }
